src/test/resources/bad/custom/004-redeclaration-in-subclass.lat
class B extends A {
    int x, x;
}

class A {
    int x, y;
}
